flux/apps/arr/sonarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: default
spec:
  selector:
    matchLabels:
      app: sonarr
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:4.0.20
          resources:
            requests:
              cpu: 126m
              memory: 419Mi
            limits:
              memory: 419Mi
          ports:
            - containerPort: 8989
          volumeMounts:
            - name: sonarr-data
              mountPath: /config
            - name: media-shows
              mountPath: /shows
            - name: qbt-downloads
              mountPath: /downloads
      volumes:
        - name: sonarr-data
          nfs:
            server: datasphere
            path: /Root/Volumes/sonarr
        - name: media-shows
          nfs:
            server: datasphere
            path: /Root/Media/Shows
        - name: qbt-downloads
          nfs:
            server: datasphere
            path: /Root/Volumes/qbt/downloads
