flux/apps/arr/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: default
spec:
  selector:
    app: sonarr
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8989
