flux/apps/arr/sonarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-local
  namespace: default
spec:
  entryPoints:
    - local
  routes:
    - match: Host(`sonarr.home`)
      kind: Rule
      services:
        - name: sonarr
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-web
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`sonarr.arlodev.co.uk`)
      kind: Rule
      services:
        - name: sonarr
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-websecure
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.arlodev.co.uk`)
      kind: Rule
      services:
        - name: sonarr
          port: 80
  tls:
    secretName: cert-sonarr
